--- a/assets-dev/scss/components/_components.scss
+++ b/assets-dev/scss/components/_components.scss
@@ -14,7 +14,7 @@
 
 #hbl_operator_state_div {
   position: relative;
-  z-index: 200;
+  z-index: 801;
 }
 
 // -----------------------------------------------------
